fixing footer spacing

--- a/client/main.css
+++ b/client/main.css
@@ -126,7 +126,7 @@ p {
 
 .footer-div {
   position: relative;
-  padding-top: 5%;
+  padding-top: 10%;
 }
 
 .btn.btn-primary.next-button:active {
